# fantastic-potato

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yaml
potato-core/: Cargo.toml
src/: app_resolver.rs  args.rs  logger.rs  main.rs  request_parser.rs  request_sender.rs  response_bytes.rs  state.rs
src/config/: app.rs  mod.rs  server.rs
src/load_balancer/: mod.rs  random.rs
