[package]
name = "fantastic-potato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
http = "1.1.0"
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0.201", features = ["derive"] }
serde_with = "3.8.1"
serde_yaml = "0.9.34"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }
